--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -3,13 +3,13 @@
 {% block head_content %}
     <title>Platzigram</title>
 {% endblock%}
-
+<!DOCTYPE html>
 {% block container %}
+
     <div class="container">
-        {% for post in posts %}
-            {% include 'posts/post_card.html' %}
-        {% endfor %}
+        <div class="row">
+            {% include "posts/post_card.html" %}
+        </div>
     </div>
 
-    {% include 'pagination.html' %}
 {% endblock %}
