--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -10,7 +10,7 @@
             <p class="alert alert-danger">{{ error }}</p>
         {% endif %}
 
-        <form method="POST" action="{% url "signup" %}">
+        <form method="POST" action="{% url "users:signup" %}">
         {% csrf_token %} {% comment %} Esto sirve para decirle a Django que estamos autorizados a realizar metodos POST con un Token autogenerado {% endcomment %}
         <div class="form-group">
             <input type="text" class="form-control" name="username" placeholder="User" required="true">
